<resources>
    <string name="app_name">阿里云直播</string>
    <string name="text_push_config">推流设置</string>
    <string name="text_global_config">全局配置</string>
    <string name="text_camera_config">前后摄像头</string>
    <string name="text_beauty_switch">美颜开关</string>
    <string name="text_hdpreview_switch">高清预览</string>
    <string name="text_audio_link">纯音频连麦</string>
    <string name="text_auto_focus">自动对焦</string>
    <string name="text_video_resolution">推流分辨率</string>
    <string name="text_video_fps">视频帧率</string>
    <string name="text_rtmp_config">rtmp配置</string>
    <string name="text_video_hard_coding">视频硬编码</string>
    <string name="text_video_hard_encode">视频硬解码</string>
    <string name="text_audio_hard_coding">音频硬编码</string>
    <string name="text_video_gop_config">视频编码GOP</string>
    <string name="text_video_initial_bitrate">视频初始码率</string>
    <string name="text_video_target_bitrate">视频编码目标码率</string>
    <string name="text_video_min_bitrate">视频编码最小码率</string>
    <string name="text_audio_channel_count">音频采集声道数</string>
    <string name="text_audio_sample_rate">音频采样率</string>
    <string name="text_audio_coding">音频编码格式</string>
    <string name="text_push_reconnect_count">推流自动重连次数</string>
    <string name="text_push_reconnect_time">推流自动重连间隔</string>
    <string name="rc_send">发送</string>
    <string name="text_bgm_config">背景音乐</string>
    <string name="text_live_config">参数配置</string>
    <string name="text_ear_back_config">耳返配置</string>
    <string name="text_ear_back_switch">耳返开关</string>
    <string name="text_ear_back_volume">耳返音量</string>
    <string name="text_pich_value_config">音调配置</string>
    <string name="text_pich_value">音调高低</string>
    <string name="text_reverb_mode_config">混响配置</string>
    <string name="text_reverb_mode">混响模式</string>
    <string name="text_voice_changer_config">变声配置</string>
    <string name="text_voice_changer_mode">变声模式</string>
    <string name="text_video_pre_process_config">视频预处理</string>
    <string name="room_enter_name_tv">进入房间</string>
    <string name="push_enter_name_tv">摄像头推流</string>
    <string name="pull_common_enter_name_tv">直播拉流</string>
    <string name="pull_rtc_enter_name_tv">测试RTC拉流</string>
    <string name="text_audio_pre_process_config">自定义音频前处理</string>
    <string name="liveroom_string_home_title">房间设置</string>
    <string name="liveroom_string_username">昵称</string>
    <string name="liveroom_string_hint_role">角色</string>
    <string name="liveroom_string_hint_interactive_role">进入时自动上麦</string>
    <string name="liveroom_string_interactive_role">主播</string>
    <string name="liveroom_string_hint_live_role">旁观，可随时上麦</string>
    <string name="liveroom_string_live_role">观众</string>
    <string name="liveroom_string_rtc">音视频通讯</string>
    <string name="liveroom_string_channel_id_tv">房间号：%1$s</string>
    <string name="liveroom_string_copy_success">房间号已复制</string>
    <string name="liveroom_string_hint_username">自动生成用户名</string>
    <string name="liveroom_string_hint_rooomno">建议五位以上</string>
    <string name="liveroom_string_load_channel_id_error">自动获取房间号失败，%1$s</string>
    <string name="liveroom_string_hint_channel_id">房间号</string>
    <string name="liveroom_string_user_id">用户ID</string>
    <string name="liveroom_string_room_ip">用户服务ip</string>
    <string name="liveroom_string_hint_user_id">自动生成用户的ID</string>
    <string name="liveroom_string_hint_room_ip">请输入用户服务ip</string>
    <string name="liveroom_string_title_back">返回</string>
    <string name="liveroom_string_enter">进入房间</string>
    <string name="liveroom_ask_for_pk">申请PK</string>
    <string name="liveroom_ask_accept">接受</string>
    <string name="liveroom_ask_refuse">拒绝</string>
    <string name="liveroom_linking">正在连麦中</string>
    <string name="liveroom_ask_link">申请连麦</string>
    <string name="liveroom_play_refresh">重试</string>
    <string name="liveroom_btn_cancle">取消</string>
    <string name="liveroom_btn_confirm">确认</string>
    <string name="liveroom_enter_userid_forbid_empty">用户ID不能为空</string>
    <string name="liveroom_enter_usernick_forbid_empty">用户昵称不能为空</string>
    <string name="liveroom_enter_roomno_forbid_empty">房间号不能为空</string>
    <string name="liveroom_string_hint_push_url">输入推流url</string>
    <string name="liveroom_string_hint_pull_url">输入拉流url</string>
    <!--           button             -->
    <string name="live_push_btn">开始推流</string>
    <string name="live_beauty_btn">美颜</string>
    <string name="live_sound_btn">音效</string>
    <string name="live_carmer_btn">摄像头</string>
    <string name="live_pk_btn">PK</string>
    <string name="mute_btn">静音</string>
    <string name="live_adjust_parm_btn">调节参数</string>
    <string name="live_data_btn">数据指标</string>
    <string name="live_microphone_btn">连麦</string>
    <string name="finish_play_btn">结束观看</string>
    <string name="telephone_change_btn">听筒切换</string>
    <string name="prompt">提示</string>
    <string name="pull_url_empty">拉流地址为空</string>
    <string name="cancle_mic">取消连麦</string>
    <string name="network_exception_title">网络异常</string>
    <string name="network_exception_desc">由于网络问题,请重新加入房间</string>

</resources>
