<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:RTCEditText="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/rtc_audioliveroom_fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/liveroom_back_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:id="@+id/liveroom_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/liveroom_margin_20"
        android:layout_marginTop="@dimen/liveroom_margin_15"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/back_desc"
        android:layout_toRightOf="@id/liveroom_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/liveroom_margin_15"
        android:textSize="@dimen/liveroom_size_text_17"
        android:textColor="@color/color_title_back_text_black"
        android:text="@string/liveroom_string_title_back"
        />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/liveroom_tv_title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/liveroom_string_home_title"
            android:textColor="@color/color_title_text_black"
            android:textSize="@dimen/liveroom_size_text_17" />

        <View
            android:id="@+id/liveroom_et_title_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/liveroom_margin_20"
            android:layout_below="@id/liveroom_tv_title_home"
            android:background="@color/liveroom_color_bottom_line" />

        <TextView
            android:id="@+id/liveroom_tv_channel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liveroom_et_title_line"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_15"
            android:text="@string/liveroom_string_hint_channel_id"
            android:textColor="@color/liveroom_color_text_gray"
            android:textSize="@dimen/liveroom_size_text_12" />

        <EditText
            android:id="@+id/liveroom_et_channel_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/liveroom_margin_40"
            android:layout_below="@id/liveroom_tv_channel_id"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_5"
            android:layout_marginRight="@dimen/liveroom_margin_36"
            android:background="@null"
            android:hint="@string/liveroom_string_hint_rooomno"
            android:digits="1234567890"
            android:textColor="@color/liveroom_color_text_black"
            android:textColorHint="@color/liveroom_color_text_gray"
            android:textCursorDrawable="@drawable/liveroom_text_cursor_shape"
            android:textSize="@dimen/audioliveroom_size_text_16" />


        <View
            android:id="@+id/liveroom_et_channel_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/liveroom_et_channel_id"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="@color/liveroom_color_bottom_line" />

        <TextView
            android:id="@+id/liveroom_tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liveroom_et_channel_line"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_15"
            android:text="@string/liveroom_string_user_id"
            android:textColor="@color/liveroom_color_text_gray"
            android:textSize="@dimen/liveroom_size_text_12" />

        <EditText
            android:id="@+id/liveroom_et_user_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/liveroom_margin_40"
            android:layout_below="@id/liveroom_tv_user_id"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_5"
            android:layout_marginRight="@dimen/liveroom_margin_36"
            android:background="@null"
            android:hint="@string/liveroom_string_hint_user_id"
            android:digits="1234567890"
            android:textColor="@color/liveroom_color_text_black"
            android:textColorHint="@color/liveroom_color_text_gray"
            android:textCursorDrawable="@drawable/liveroom_text_cursor_shape"
            android:textSize="@dimen/audioliveroom_size_text_16" />

        <View
            android:id="@+id/liveroom_tv_user_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/liveroom_et_user_id"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="@color/liveroom_color_bottom_line" />

        <TextView
            android:id="@+id/liveroom_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/liveroom_tv_user_line"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_15"
            android:text="@string/liveroom_string_username"
            android:textColor="@color/liveroom_color_text_gray"
            android:textSize="@dimen/liveroom_size_text_12" />


        <EditText
            android:id="@+id/liveroom_et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/liveroom_margin_40"
            android:layout_below="@id/liveroom_tv_username"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="@dimen/liveroom_margin_5"
            android:layout_marginRight="@dimen/liveroom_margin_36"
            android:background="@null"
            android:hint="@string/liveroom_string_hint_username"
            android:textColor="@color/liveroom_color_text_black"
            android:textColorHint="@color/liveroom_color_text_gray"
            android:textCursorDrawable="@drawable/liveroom_text_cursor_shape"
            android:textSize="@dimen/audioliveroom_size_text_16" />

        <View
            android:id="@+id/username_slipt_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/liveroom_et_username"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="@color/liveroom_color_bottom_line" />

        <LinearLayout
            android:id="@+id/switch_link_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_slipt_line"
            android:layout_marginLeft="@dimen/liveroom_margin_36"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/switch_link_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="是否连麦"
                android:textColor="@color/liveroom_color_text_gray"
                android:textSize="12dp" />

            <Switch
                android:id="@+id/switch_link_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:switchMinWidth="26dp"
                android:thumb="@drawable/link_thumb"
                android:track="@drawable/link_track" />

        </LinearLayout>

        <TextView
            android:id="@+id/liveroom_tv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/switch_link_layout"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="@dimen/liveroom_margin_15"
            android:text="@string/liveroom_string_hint_role"
            android:textColor="@color/liveroom_color_text_gray"
            android:textSize="@dimen/liveroom_size_text_12" />

        <RelativeLayout
            android:id="@+id/liveroom_rl_interactive_role"
            android:layout_width="140dp"
            android:layout_height="134dp"
            android:layout_below="@id/liveroom_tv_role"
            android:layout_marginLeft="@dimen/liveroom_margin_34"
            android:layout_marginTop="@dimen/liveroom_margin_12"
            android:background="@drawable/shape_bg_enter_green"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/anchor_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:maxLines="1"
                android:text="@string/liveroom_string_hint_interactive_role"
                android:textColor="@color/liveroom_color_role_hint"
                android:textSize="@dimen/liveroom_size_text_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="28dp"
                android:maxLines="1"
                android:text="@string/liveroom_string_interactive_role"
                android:textColor="@color/liveroom_color_text_black"
                android:textSize="@dimen/audioliveroom_size_text_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/liveroom_rl_live_role"
            android:layout_width="140dp"
            android:layout_height="134dp"
            android:layout_below="@id/liveroom_tv_role"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/liveroom_margin_12"
            android:layout_marginRight="@dimen/liveroom_margin_34"
            android:background="@drawable/shape_bg_btn_oval"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/audience_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:maxLines="1"
                android:text="@string/liveroom_string_hint_live_role"
                android:textColor="@color/liveroom_color_role_hint"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="28dp"
                android:maxLines="1"
                android:text="@string/liveroom_string_live_role"
                android:textColor="@color/liveroom_color_text_black"
                android:textSize="@dimen/audioliveroom_size_text_16" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_enter_room"
        android:layout_width="match_parent"
        android:layout_height="@dimen/liveroom_height_size_48"
        android:layout_marginLeft="@dimen/liveroom_margin_36"
        android:layout_marginRight="@dimen/liveroom_margin_36"
        android:textColor="@color/color_title_text_black"
        android:background="@drawable/shape_bg_btn_green"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/liveroom_margin_38"
        android:textSize="@dimen/liveroom_size_text_18"
        android:text="@string/liveroom_string_enter"/>

</RelativeLayout>