<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#fafafa"
        android:gravity="center_vertical"
        android:paddingLeft="28dp"
        android:text="耳返"
        android:textColor="#00c1de"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/view_push_config_margin_top_15"
            android:layout_marginBottom="@dimen/view_push_config_margin_top_15"
            android:layout_weight="1"
            android:text="@string/text_ear_back_switch"
            android:textSize="16sp"

            android:textColor="#333333" />

        <Switch
            android:id="@+id/switch_ear_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="false"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:thumb="@drawable/link_thumb"
            android:track="@drawable/link_track"
            android:paddingBottom="5dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/view_push_config_margin_15"
        android:layout_marginRight="@dimen/view_push_config_margin_15"
        android:background="@color/color_background_gray" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <ImageView
            android:id="@+id/iv_volumreduce"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:scaleType="fitXY"
            android:src="@drawable/live_volum_no"/>

        <SeekBar
            android:id="@+id/seekbar_earback_volume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_volumreduce"
            android:layout_toLeftOf="@+id/iv_volumadd"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:max="100"
            android:progress="100" />

        <ImageView
            android:id="@+id/iv_volumadd"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:scaleType="fitXY"
            android:src="@drawable/live_volum"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/view_push_config_margin_15"
        android:layout_marginRight="@dimen/view_push_config_margin_15"
        android:background="@color/color_background_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#fafafa"
        android:gravity="center_vertical"
        android:paddingLeft="28dp"
        android:text="音调"
        android:textColor="#00c1de"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_push_config_margin_20"
        android:paddingRight="@dimen/view_push_config_margin_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/view_push_config_margin_top_15"
            android:layout_marginRight="@dimen/view_push_config_margin_10"
            android:layout_marginBottom="@dimen/view_push_config_margin_top_15"
            android:text="@string/text_pich_value"
            android:visibility="gone"
            android:textColor="@color/color_text_black" />

        <SeekBar
            android:id="@+id/seekbar_pich_volume"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:max="20"
            android:progress="10" />

        <TextView
            android:id="@+id/tv_pich_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/view_push_config_margin_10"
            android:layout_marginTop="@dimen/view_push_config_margin_top_15"
            android:layout_marginBottom="@dimen/view_push_config_margin_top_15"
            android:text="1.0"
            android:visibility="gone"
            android:textColor="@color/color_text_black" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#fafafa"
        android:gravity="center_vertical"
        android:paddingLeft="28dp"
        android:text="声音效果"
        android:textColor="#00c1de"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="28dp"
        android:paddingRight="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/view_push_config_margin_top_15"
            android:layout_marginBottom="@dimen/view_push_config_margin_top_15"
            android:layout_weight="1"
            android:text="@string/text_reverb_mode"
            android:textColor="@color/color_text_black" />

        <TextView
            android:id="@+id/tv_reverb_mode"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/live_right_arrow"
            android:drawablePadding="5dp"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/view_push_config_margin_15"
        android:layout_marginRight="@dimen/view_push_config_margin_15"
        android:background="@color/color_background_gray" />


    <com.alilive.alilivesdk_demo.view.VoiceChangerView
        android:id="@+id/view_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/live_config_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/view_push_config_margin_20"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/view_push_config_margin_20"
        android:layout_marginBottom="10dp"
        android:text="保存"
        android:visibility="gone" />


</LinearLayout>